// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bulkCreate should display error message when bulkCreate request fails 1`] = `
Array [
  <h2
    class="euiTitle css-1w464ad-euiTitle-m"
  >
    Load Kibana objects
  </h2>,
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiText css-1lo1kz-euiText-m"
      >
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary"
        data-test-subj="loadSavedObjects"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Load Kibana objects
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
  />,
  <div
    class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning css-1yqbqzs-euiPanel-none-m-warning-euiCallOut"
    data-test-subj="loadSavedObjects_failed"
  >
    <p
      class="euiTitle euiCallOutHeader__title css-nznt5c-euiTitle-xs-euiCallOutHeader-warning"
    >
      Request failed, Error: simulated bulkRequest error
    </p>
  </div>,
]
`;

exports[`bulkCreate should display success message when bulkCreate is successful 1`] = `
Array [
  <h2
    class="euiTitle css-1w464ad-euiTitle-m"
  >
    Load Kibana objects
  </h2>,
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiText css-1lo1kz-euiText-m"
      >
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary"
        data-test-subj="loadSavedObjects"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Load Kibana objects
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
  />,
  <div
    class="euiPanel euiPanel--success euiPanel--paddingMedium euiCallOut euiCallOut--success css-1kpm4pz-euiPanel-none-m-success-euiCallOut"
    data-test-subj="loadSavedObjects_success"
  >
    <p
      class="euiTitle euiCallOutHeader__title css-8813xx-euiTitle-xs-euiCallOutHeader-success"
    >
      1 saved objects successfully added
    </p>
  </div>,
]
`;

exports[`renders 1`] = `
<Fragment>
  <EuiTitle
    size="m"
  >
    <h2>
      Load Kibana objects
    </h2>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="center"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem>
      <EuiText>
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="loadSavedObjects"
        isLoading={false}
        onClick={[Function]}
      >
        Load Kibana objects
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
</Fragment>
`;
